<resources>
    <string name="app_name">有个APP</string>
    <string name="action_settings">Settings</string>
    <string name="menu_nav_camera">拍照</string>
    <string name="menu_nav_manage">设置</string>
    <string name="menu_nav_title">互动</string>
    <string name="menu_nav_share">分享</string>
    <string name="menu_nav_send">发送</string>
    <string name="menu_nav_evaluation">评价</string>
    <string name="title_select_album">选择相册</string>
    <string name="btn_album_list_cancel">取消</string>
    <string name="btn_back_to_photo">照片</string>
    <string name="title_move_and_zoom">移动和缩放</string>
    <string name="btn_cut_photo_confirm">完成</string>
    <string name="btn_contacts_back">返回</string>
    <string name="title_contacts">联系人</string>
    <string name="text_input_password">请输入密码（4&#8211;10位，数字、字母和符号）</string>
    <string name="text_input_progress">请输入进度（0&#8211;100之间的数字）</string>
    <string name="btn_set_progress_confirm">确定</string>
    <string name="btn_update_database">更新并加载数据库</string>
    <string name="btn_get_current_address">获取当前选中地址</string>
    <string name="btn_count_down">倒数60秒</string>
    <string name="btn_intent">Intent</string>
    <string name="btn_show_guide_next_time">下次启动打开导航页</string>
    <string name="text_input_intent_content">输入Intent的内容</string>
    <string name="toast_input_intent_can_not_null">输入Intent内容不能为空</string>
    <string name="toast_not_app_response">没有APP响应</string>
    <string name="btn_update_name">更新名称</string>
    <string name="btn_delete_pokemon">删除这只Pokemon</string>
    <string name="btn_insert_all_data">导入全部数据</string>
    <string name="btn_delete_table_data">删除表数据</string>
    <string name="btn_delete_database">删除数据库</string>
    <string name="text_date1">日期【1】</string>
    <string name="text_time1">时间【1】</string>
    <string name="text_date2">日期【2】</string>
    <string name="text_time2">时间【2】</string>
    <string name="text_friendly_time1">友好时间【1】</string>
    <string name="radio_btn_year">年</string>
    <string name="radio_btn_month">月</string>
    <string name="radio_btn_day">日</string>
    <string name="text_get_apart">获取相差：</string>
    <string name="btn_number_of_year">年份</string>
    <string name="btn_number_of_month">月数</string>
    <string name="btn_number_of_day">天数</string>
    <string name="btn_number_of_minute">分钟</string>
    <string name="btn_get_current_time">获取当前时间</string>
    <string name="btn_clear_datetime_data">清除数据</string>
    <string name="btn_select_dialog">选择对话框</string>
    <string name="btn_loading_dialog">等待对话框</string>
    <string name="btn_input_content_dialog">输入内容对话框</string>
    <string name="btn_input_evalutation_dialog">输入与评价对话框</string>
    <string name="btn_guide_skip">跳过</string>
    <string name="btn_nest_detail_back">返回</string>
    <string name="btn_list_nest_list">ListView 嵌套 ListView</string>
    <string name="btn_list_nest_grid">ListView 嵌套 GridView</string>
    <string name="btn_list_nest_recycler">ListView 嵌套 RecyclerView</string>
    <string name="btn_recycler_nest_list">RecyclerView 嵌套 ListView（瀑布流）</string>
    <string name="btn_recycler_nest_grid">RecyclerView 嵌套 GridView（瀑布流）</string>
    <string name="btn_recycler_nest_recycler">RecyclerView 嵌套 RecyclerView（瀑布流）</string>
    <string name="btn_grid_nest_list">GridView 嵌套 ListView</string>
    <string name="btn_grid_nest_grid">GridView 嵌套 GridView</string>
    <string name="btn_grid_nest_recycler">GridView 嵌套 RecyclerView</string>
    <string name="btn_scroll_nest_list">NestedScrollView 嵌套 ListView</string>
    <string name="btn_scroll_nest_grid">NestedScrollView 嵌套 GridView</string>
    <string name="btn_scroll_nest_recycler">NestedScrollView 嵌套 RecyclerView</string>
    <string name="btn_text_chinese">中文</string>
    <string name="btn_text_english">English</string>
    <string name="btn_text_japanese">日本語</string>
    <string name="btn_text_korean">한국어</string>
    <string name="title_my_tools">我的工具</string>
    <string name="btn_change_url">更换接口</string>
    <string name="btn_get_weather">GET今天天气</string>
    <string name="btn_post_weather">POST天气预报</string>
    <string name="btn_get_okhttp_msg">GET Okhttp信息</string>
    <string name="btn_get_verification_msg">需要验证的连接</string>
    <string name="btn_download_file">下载文件</string>
    <string name="btn_get_app_version">获取App版本号</string>
    <string name="text_current_version">当前版本号</string>
    <string name="text_network_version">网络版本号</string>
    <string name="btn_compare_two_version">比较两个版本号大小</string>
    <string name="btn_back_to_album">相册</string>
    <string name="title_lately_photo">最近相片</string>
    <string name="btn_photo_list_cancel">取消</string>
    <string name="text_pokemon_characteristic">特性</string>
    <string name="text_special_characteristics">特殊特性</string>
    <string name="text_pokemon_property">属性</string>
    <string name="text_pokemon_race_value">种族值</string>
    <string name="text_pokemon_hp_value">HP</string>
    <string name="text_pokemon_attack_value">攻击</string>
    <string name="text_pokemon_defense_value">防御</string>
    <string name="text_special_attack_value">特攻</string>
    <string name="text_special_defense_value">特防</string>
    <string name="text_pokemon_speed_value">速度</string>
    <string name="btn_insert_to_datebase">加入数据库</string>
    <string name="btn_test_server_url">测试服url</string>
    <string name="btn_official_server_url">正式服url</string>
    <string name="btn_custion_server_url">自定义url</string>
    <string name="btn_set_url_confirm">确定</string>
    <string name="btn_clear_sharedpreferences">清空 SharedPreferences</string>
    <string name="btn_change_photo">修改图片</string>
    <string name="btn_get_system_permission">获取系统权限</string>
    <string name="btn_get_ablum_resourcd">获取相册资源</string>
    <string name="btn_take_photo">选图和拍照</string>
    <string name="btn_get_contacts">获取系统联系人</string>
    <string name="btn_do_asynctask">AsyncTask</string>
    <string name="btn_do_heart_request">心跳请求</string>
    <string name="btn_do_queue_request">队列请求</string>
    <string name="btn_do_cache_pool">缓存线程池</string>
    <string name="btn_do_fix_pool">定长线程池</string>
    <string name="btn_do_delayed_pool">延时执行</string>
    <string name="btn_do_period_pool">周期执行</string>
    <string name="btn_do_alway_period_pool">每周期延时执行</string>
    <string name="btn_do_single_pool">单线程线程池</string>
    <string name="btn_cancel_all_thread">取消所有线程</string>
    <string name="btn_clear_thread_msg">清除信息</string>
    <string name="text_network_timeout_msg">连接超时，请检查你的网络设置。</string>
    <string name="dialog_title_evalutation">评价业务</string>
    <string name="dialog_text_my_score">我的评分</string>
    <string name="dialog_text_hint">填写您的感受或意见&#8230;</string>
    <string name="dialog_btn_confirm_evalutation">提交您的评价</string>
    <string name="dialog_input_confirm">确定</string>
    <string name="dialog_input_cancel">取消</string>
    <string name="dialog_tips_confirm">确定</string>
    <string name="dialog_tips_cancel">取消</string>
    <string name="text_select_by_key">输入关键字搜索</string>
    <string name="title_mine">我的</string>
    <string name="btn_imitate_qq_interface_inside">仿QQ界面（内部界面）</string>
    <string name="btn_imitate_qq_interface_outside">仿QQ界面（外部仿QQ应用）</string>
    <string name="btn_material_design_interface">Material Design界面</string>
    <string name="btn_my_tools">我的工具</string>
    <string name="btn_app_info_detail">详细信息</string>
    <string name="btn_uninstall_app">卸载</string>
    <string name="text_edit_personalized_signature">编辑个性签名</string>
    <string name="text_network_connect_msg">连接超时，请检查你的网络设置。</string>
    <string name="btn_request_file">请求外部APP文件</string>
    <string name="btn_response_file">返回文件[property.txt]</string>
    <string name="btn_camera">android.hardware.Camera</string>
    <string name="btn_camera2">android.hardware.camera2</string>
    <string name="btn_flashlight_off">FlashLight Off</string>
    <string name="btn_flashlight_on">FlashLight On</string>
    <string name="btn_cancel_all_notification">取消全部通知</string>
    <string name="btn_send_cover_notification">发送一条覆盖通知</string>
    <string name="btn_send_cover_not_notification">发送一条不覆盖通知</string>
    <string name="btn_send_permanent_notification">发送一条常驻通知</string>
    <string name="btn_send_intent_notification">发送一条带Intent通知</string>
    <string name="btn_send_custom_music_notification">发送一条自定义音乐通知</string>
    <string name="btn_send_progress_notification">发送一条进度条通知</string>
    <string name="btn_start_service">开启服务</string>
    <string name="btn_stop_service">停止服务</string>
    <string name="btn_bind_service">绑定服务</string>
    <string name="btn_unbind_service">解绑服务</string>
    <string name="btn_play_music">播放</string>
    <string name="btn_pause_music">暂停</string>
    <string name="btn_stop_music">停止</string>
    <string name="btn_previous_music">上一首</string>
    <string name="btn_next_music">下一首</string>
    <string name="text_loading">加载中&#8230;</string>
    <string name="text_requesting">请求中&#8230;</string>
    <string name="text_downloading">下载中&#8230;</string>
    <string name="text_contacts_permission_message">在设置-应用-%1$s-权限中开启通讯录权限，以正常使用获取联系人信息功能</string>
    <string name="text_call_permission_message">在设置-应用-%1$s-权限中开启电话权限，以正常使用该功能</string>
    <string name="text_calendar_permission_message">在设置-应用-%1$s-权限中开启日历权限，以正常使用该功能</string>
    <string name="text_camera_permission_message">在设置-应用-%1$s-权限中开启相机权限，以正常使用该功能</string>
    <string name="text_location_permission_message">在设置-应用-%1$s-权限中开启位置信息权限，以正常使用该功能</string>
    <string name="text_storage_permission_message">在设置-应用-%1$s-权限中开启存储权限，以正常使用该功能</string>
    <string name="text_audio_permission_message">在设置-应用-%1$s-权限中开启麦克风权限，以正常使用该功能</string>
    <string name="text_sms_permission_message">在设置-应用-%1$s-权限中开启短信权限，以正常使用该功能</string>
    <string name="text_sensors_permission_message">在设置-应用-%1$s-权限中开启身体传感器权限，以正常使用该功能</string>
    <string name="toast_not_pokemon_info">没有该Pokemon的信息</string>
    <string name="toast_pokemon_data_update_success">更新成功</string>
    <string name="toast_pokemon_name_not_null">名字不能为空</string>
    <string name="toast_pokemon_data_delete_success">删除成功</string>
    <string name="toast_delete_data_table_success">删除表成功</string>
    <string name="toast_delete_database_success">删除数据库成功</string>
    <string name="toast_delete_database_error">数据库不存在或删除失败</string>
    <string name="btn_choose_from_mobile">从手机相册选择</string>
    <string name="btn_choose_from_take_photo">拍照</string>
    <string name="btn_do_not_choose">取消</string>
    <string name="toast_do_not_accept_text_data">不接受文本数据</string>
    <string name="toast_not_activity_response">没有Activity响应请求</string>
    <string name="toast_datebase_file_not_exists">数据库文件不存在</string>
    <string name="toast_not_only_number">不是纯数字</string>
    <string name="toast_open_guide_setting_success">设置成功</string>
    <string name="btn_count_down_again">(%d) 再次倒数</string>
    <string name="btn_count_down_60_second">倒数60秒</string>
    <string name="text_tips_dialog_title">确定要这样？</string>
    <string name="btn_tips_dialog_confirm">确定</string>
    <string name="btn_tips_dialog_cancel">取消</string>
    <string name="toast_you_can_not_do_that">你不能这样的！</string>
    <string name="text_input_dialog_title">请填写发送的内容</string>
    <string name="text_input_dialog_send">发送</string>
    <string name="text_input_dialog_close">关闭</string>
    <string name="toast_contant_can_not_null">内容不能为空</string>
    <string name="text_evalutation_dialog_title">给这个APP评价一次</string>
    <string name="toast_contant_and_score">评价内容:%1$s 评分:%2$f</string>
    <string name="btn_tool_1">ViewPager简介</string>
    <string name="btn_tool_2">接口测试</string>
    <string name="btn_tool_3">动画测试</string>
    <string name="btn_tool_4">对话框测试</string>
    <string name="btn_tool_5">线程池测试</string>
    <string name="btn_tool_6">日期工具测试</string>
    <string name="btn_tool_7">列表嵌套测试</string>
    <string name="btn_tool_8">已安装APP信息</string>
    <string name="btn_tool_9">自定义控件展示</string>
    <string name="btn_tool_10">获取系统资源</string>
</resources>