<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#11141A"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cancel_all"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_bg_red_iselectable"
            android:gravity="center"
            android:text="@string/btn_cancel_all_notification"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_send_cover"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_bg_red_iselectable"
            android:gravity="center"
            android:text="@string/btn_send_cover_notification"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_send_not_cover"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_bg_red_iselectable"
            android:gravity="center"
            android:text="@string/btn_send_cover_not_notification"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_send_permanent"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_bg_red_iselectable"
            android:gravity="center"
            android:text="@string/btn_send_permanent_notification"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_send_intent"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_bg_red_iselectable"
            android:gravity="center"
            android:text="@string/btn_send_intent_notification"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_custom_music"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_bg_red_iselectable"
            android:gravity="center"
            android:text="@string/btn_send_custom_music_notification"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_progress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_bg_red_iselectable"
            android:gravity="center"
            android:text="@string/btn_send_progress_notification"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>
