<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#11141A"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/selector_bg_red_iselectable"
        android:text="@string/btn_camera"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_camera2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@drawable/selector_bg_red_iselectable"
        android:text="@string/btn_camera2"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_flashlight"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/selector_bg_red_iselectable"
        android:text="@string/btn_flashlight_off"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>
