<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#11141A"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/btn_chinese"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/selector_bg_red_iselectable"
                android:text="@string/btn_text_chinese"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_english"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_bg_red_iselectable"
                android:text="@string/btn_text_english"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_japanese"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_bg_red_iselectable"
                android:text="@string/btn_text_japanese"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_korean"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_bg_red_iselectable"
                android:text="@string/btn_text_korean"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
